--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  fluttertoast: ^8.2.1
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
 
