--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^8.2.1
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
